Attempt w/ newline_to_br

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,9 @@
 title: Nearly Qualified
-description: |
-  Musings of a reclusive video game nerd working in telco who typically ends up far too deep down the rabbit hole.
-  
-  I wanted to share a vehicle for developing my understanding of myself, over-committing to new things and how we fit into a weird cosmic jigsaw puzzle when all the pieces keep changing their sides.
-  
-  I marry my experience in video games with my background in psychology, automation and my career in corporate environments to produce thoughtful and relevant commentary.
+description: "Musings of a reclusive video game nerd working in telco who typically ends up far too deep down the rabbit hole.\n\n\nI wanted to share a vehicle for developing my understanding of myself, over-committing to new things and how we fit into a weird cosmic jigsaw puzzle when all the pieces keep changing their sides.\n\n\nI marry my experience in video games with my background in psychology, automation and my career in corporate environments to produce thoughtful and relevant commentary."
 author: Abpor - Rob
 email: podcast@ncrypt.co.nz
 lang: en-us
-copyright: "&#x2117; &amp; &#xA9; Ncrypt  2024"
+copyright: "&#x2117; &amp; &#xA9; 2024"
 logo: /assets/img/logo.png
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
