--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,5 @@
 title: Nearly Qualified
-description: |
-  Musings of a reclusive video game nerd working in telco who typically ends up far too deep down the rabbit hole.
-
-  I wanted to share a vehicle for developing my understanding of myself, over-committing to new things and how we fit into a weird cosmic jigsaw puzzle when all the pieces keep changing their sides.
-
-  I marry my experience in video games with my background in psychology, automation and my career in corporate environments to produce thoughtful and relevant commentary.
+description: Musings of a reclusive video game nerd working in telco who typically ends up far too deep down the rabbit hole.     I wanted to share a vehicle for developing my understanding of myself, over-committing to new things and how we fit into a weird cosmic jigsaw puzzle when all the pieces keep changing their sides.     I marry my experience in video games with my background in psychology, automation and my career in corporate environments to produce thoughtful and relevant commentary.
 author: Abpor - Rob
 email: podcast@ncrypt.co.nz
 lang: en-us
